--- a/clientside/pages/movie.html
+++ b/clientside/pages/movie.html
@@ -87,9 +87,9 @@
                 </div>
             </div>
             
-            <div class="bimgr" id="titt">
+            <!-- <div class="bimgr" id="titt">
                 <div style="padding: 5% 25%;background-color:rgb(78, 76, 76);color:white;text-align:center;">Share</div>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="abou">
