--- a/clientside/pages/movie.html
+++ b/clientside/pages/movie.html
@@ -66,11 +66,11 @@
                 </div>
                 <div class="title" >
                     <h1 id="title"></h1>
-                        <p id="screen">2D,3D,IMAX 2D,MX4D 3D,4DX 3D,3D SCREEN X,ICE 3D,IMAX 3D,2D SCREEN X
-                        </p>
+                   
+                    <p id="format"></p>
                     <p id="language"></p>
                  
-                    <p><span id="duration"></span>
+                    <p class="dg"><span id="duration"></span>
                         •
                         <span id="genre"></span>
                         •
